--- a/Tests/FirstTest.yaml
+++ b/Tests/FirstTest.yaml
@@ -1,28 +1,28 @@
 config:
   target: "http://localhost:3000/qa"
   phases:
-    # - duration: 30
-    #   arrivalRate: 10
-    #   name: Warm up
-    # - duration: 45
-    #   arrivalRate: 10
-    #   rampTo: 1000
-    #   name: Ramp up load
+    - duration: 10
+      arrivalRate: 10
+      name: Warm up
+    - duration: 45
+      arrivalRate: 500
+      rampTo: 1000
+      name: Ramp up load
     - duration: 60
       arrivalRate: 1000
       name: Sustained load
   variables:
     product_id:
-        - "12"
-        - "20"
-        - "2"
-        - "8"
+        # - "12"
+        # - "20"
+        # - "2"
+        # - "8"
         - "4"
     count:
-        - "1"
-        - "2"
-        - "3"
-        - "4"
+        # - "1"
+        # - "2"
+        # - "3"
+        # - "4"
         - "5"
 
 
