--- a/Tests/FirstTest.yaml
+++ b/Tests/FirstTest.yaml
@@ -9,14 +9,14 @@ config:
       rampTo: 850
       name: Ramp up load
     - duration: 60
-      arrivalRate: 1500
+      arrivalRate: 1000
       name: Sustained load
   variables:
     product_id:
-        # - "12"
-        # - "20"
-        # - "2"
-        # - "8"
+        - "12"
+        - "20"
+        - "2"
+        - "8"
         - "966092"
         - "994663"
         - "980353"
@@ -26,10 +26,20 @@ config:
         # - "3"
         # - "4"
         - "5"
+    question_id:
+        - "4"
+        - "1"
+        - "2"
+        - "3"
 
 
 scenarios:
   - name: "Get questions"
     flow:
       - get:
-          url: "/questions?prduct_id={{ product_id }}&count={{ count }}"
+          url: "/questions?product_id={{ product_id }}&count={{ count }}"
+
+  # - name: "Get answers"
+  #   flow:
+  #     - get:
+  #         url: "/questions/{{ question_id }}/answers"
